# arquitetura-analitica-ecommerce

./: LICENSE  README.md  cloudbuild.yaml  pyproject.toml
data/bigquery/: bronzeTable.sql  goldTable.sql  silverTable.sql
data/configs/: ecommerce.config.csv  ecommerce_config.csv
data/ingestao/: IngestaoPostgresqlToLanding.py
utils/: requirements.txt
workflows/: bigquery_dag.py  parent_dag.py  pyspark_dag.py
