[project]
name = "projeto-ecommerce"
version = "1.0"
description = "Projeto para um cliente do varejo (e-commerce). Ambiente GCP."
authors = [
    {name = "Cristina Santos"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
